--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "3.2.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/netinfo": "^6.0.0",
+    "@react-native-community/netinfo": "6.0.0",
     "expo": "41",
     "expo-constants": "~10.1.3",
-    "expo-image-manipulator": "~9.1.0",
     "expo-image-picker": "~10.1.4",
     "expo-mail-composer": "~10.1.2",
-    "expo-media-library": "~12.0.2",
     "expo-notifications": "~0.11.6",
     "expo-permissions": "~12.0.1",
     "expo-secure-store": "~10.1.0",
@@ -32,7 +30,7 @@
     "react-native-screens": "~3.0.0",
     "react-native-swipe-list-view": "^3.2.7",
     "react-native-web": "~0.13.12",
-    "react-navigation": "4",
+    "react-navigation": "~5.10.0",
     "react-navigation-drawer": "^2.7.1",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.11.1",
